# sec-edgar-ingestor

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  QUICKSTART.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DECISIONS.md  FILING_PRIORITY.md  INGESTION_MODES.md  MASTER_PLAN.md  NEXT_STEPS.md  OPEN_QUESTIONS.md  OPERATIONS.md  PROGRESS.md  QUERY_PATTERNS.md  SCHEMA.md
src/sec_edgar_ingestor/: __init__.py  __main__.py  cli.py  config.py
src/sec_edgar_ingestor/db/: __init__.py  analytics.py  connection.py  migrations.py
src/sec_edgar_ingestor/db/migrations/: 0001_initial.sql  0002_13f_analytics.sql  0003_13f_compare_function.sql  0004_13f_amendment_resolution.sql  0005_periodic_reports.sql  0006_periodic_embedding_profiles.sql
src/sec_edgar_ingestor/filings/: __init__.py
src/sec_edgar_ingestor/pipeline/: modes.py  orchestrator.py  state.py
src/sec_edgar_ingestor/sec/: __init__.py  client.py  indexes.py
src/sec_edgar_ingestor/storage/: artifact_store.py
tests/: test_cli.py  test_config.py  test_db_amendment_resolution.py  test_db_analytics.py  test_db_compare_function.py  test_periodic_discovery.py  test_periodic_embeddings.py  test_periodic_loader.py  test_periodic_parser.py  test_pipeline_modes.py  test_sec_indexes.py  test_thirteenf_discovery.py  test_thirteenf_loader.py  test_thirteenf_parser.py
tests/fixtures/13f/: hr_infotable.xml  hr_primary.xml  hra_primary.xml  nt_primary.xml  nta_primary.xml  submission_hr.txt  submission_nt.txt
tests/fixtures/periodic/: 10k_primary.htm  10q_primary.htm  submission_10k.txt
(+11 files in other folders)
