[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-edgar-ingestor"
version = "0.1.0"
description = "MCP-aware SEC EDGAR ingestion pipeline with PostgreSQL-backed normalized storage."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "SEC EDGAR Maintainer", email = "opensource@example.com" }
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.28,<0.29",
  "psycopg[binary]>=3.2,<3.3",
  "python-dotenv>=1.0,<2.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
sec-edgar = "sec_edgar_ingestor.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sec_edgar_ingestor = ["py.typed", "db/migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
